2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: Fix generate-stamp deps.
	
2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: Add run-test target and fix the generation deps.

2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: Add check_with_peverify target to make it easier to
	check against MS peverify.

2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: gen-md-tests now require glib. Fix the build.

2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Initial commit of the metadata verifier test suite.