@@ -1,5 +1,9 @@
 2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* gen-md-tests: Add support for absolute uint patching.
+
+2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* Makefile: Fix generate-stamp deps.
 	
 2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>
